# check-iam-users

./: .gitignore  Dockerfile  README.md  check_users.py  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
tests/: test_diff_logic.py  test_iam_client.py
