[project]
name = "check-iam-users"
version = "1.0.0"
description = "IAM Users diff check tool"
requires-python = ">=3.12"
dependencies = [
    "boto3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "moto[iam]",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
